--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,8 @@ machine:
     - docker
 
 dependencies:
+  pre:
+    - gem install bundler
   post:
     - docker build -t $AWS_ACCOUNT_ID.dkr.ecr.us-west-2.amazonaws.com/salvus/atas:2 .
 
